less ugly version

--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,20 @@
     <title>Touraine Tech</title>
 </head>
 <body>
-<header>
+<header class="nav-header">
     <h1>Touraine Tech</h1>
-    <a href="#quisommesnous">Qui sommes nous ?</a>
-    <a href="#participer">Participer</a>
-    <a href="#proposer">Proposer un sujet</a>
+    <nav>
+        <a href="#quisommesnous">Qui sommes nous ?</a>
+        <a href="#participer">Participer</a>
+        <a href="#proposer">Proposer un sujet</a>
+    </nav>
 </header>
-<main>
+<main class="content">
     <section class="presentation">
-        <h1>Touraine Tech</h1>
-        <h2>La conférence numérique tourangelle !</h2>
+        <div>
+            <h1>Touraine Tech</h1>
+            <h2>La conférence numérique tourangelle !</h2>
+        </div>
 
         <p>Développement, design, environnement, DIY, tout sujet est bienvenu !</p>
     </section>
