added forgotten viewport meta

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <meta property="og:title" content="Touraine Tech"/>
     <meta property="og:description" content="Une conférence tourangelle !"/>
     <meta property="og:locale" content="fr_FR">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <meta property="og:image"
           content=""/>-->
     <title>Touraine Tech</title>
