--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,7 @@
     <meta property="og:description" content="Une conférence tourangelle !"/>
     <meta property="og:locale" content="fr_FR">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <meta property="og:image"
-          content=""/>-->
+    <!-- <meta property="og:image" content=""/>-->
     <title>Touraine Tech</title>
 </head>
 <body>
@@ -30,10 +29,28 @@
     <section class="presentation">
         <div>
             <h1>Touraine Tech</h1>
-            <h2>La conférence numérique tourangelle !</h2>
+            <h2>La première conférence téchnique en région centre sur les nouvelles technologies du numérique</h2>
         </div>
-
-        <p>Développement, design, environnement, DIY, tout sujet est bienvenu !</p>
+    </section>
+    <section class="themes">
+        <h1>Thématiques</h1>
+        <h2>Dev responsables</h2>
+        <ul>
+            <li>Design, UI, UX</li>
+            <li>Front web, mobile, jeux web</li>
+            <li>Internet des objets, marchés émergents</li>
+            <li>backends, cloud, bigData</li>
+            <li>tooling</li>
+            <li>Conception, architecture, pratiques de developpement</li>
+        </ul>
+    </section>
+    <section class="numbers">
+        <h1>Chiffres</h1>
+        <ul>
+            <li>Nombre de participants attendus : 250</li>
+            <li>2 amphithéatres, une salle de prises en mains, un grand espace sponsor, une cafétéria, et surtout des TOILETTES !</li>
+            <li>2 tracks de conférences pour un total de 14 conférences, 6 lightning talks, et 3 hands on</li>
+        </ul>
     </section>
     <section id="quisommesnous">
         <h1>Une association indépendante</h1>
