fix(spellcheck) : fixed some spellcheck

--- a/src/index.html
+++ b/src/index.html
@@ -32,13 +32,13 @@
 <main class="content">
     <div class="presentation">
         <h1>Touraine Tech</h1>
-        <h2>La première conférence téchnique en région centre sur les nouvelles technologies du numérique</h2>
+        <h2>La première conférence technique en région centre sur les nouvelles technologies du numérique</h2>
         <p class="presentation-date">Touraine Tech aura lieu le 23 février 2018</p>
-        <p>Cet événement a pour but de promouvoir le secteur numérique, notamment son économie, ses métiers et ses formations.  Il est organisée bénévolement par l'association Touraine Tech, dont l'objectif est de promouvoir ce secteur d'activité en touraine.</p>
+        <p>Cet événement a pour but de promouvoir le secteur numérique, notamment son économie, ses métiers et ses formations.  Il est organisée bénévolement par l'association Touraine Tech, dont l'objectif est de promouvoir ce secteur d'activité en Touraine.</p>
     </div>
     <section class="themes">
         <h1>Thématiques</h1>
-        <p>L'axe principal mis en avant sera le développement résponsable.</p>
+        <p>L'axe principal mis en avant sera le développement responsable.</p>
         <ul>
             <li>
                 Design, UI, UX
@@ -53,7 +53,7 @@
                 Jeux vidéos et hybrides
             </li>
             <li>
-                Internet des Objets
+                Internet des objets
             </li>
             <li>
                 Conception, architecture
@@ -64,21 +64,21 @@
         </ul>
     </section>
     <section class="numbers">
-        <h1>Ambiations</h1>
+        <h1>Ambitions</h1>
         <ul>
             <li>Cette conférence sera ouverte sur un large panel de technologies informatiques, visant un public autant professionnel qu'étudiant. Elle accueillera jusqu'à 250 personnes.</li>
             <li>Pour cette première édition, nous organisons une journée de conférence sur Tours dans les locaux du département informatique de l'école polytechnique de l'université de Tours.</li>
-            <li>Seront mis à disposition 2 amphithéatres, une salle de prises en mains, un grand espace sponsor, une cafétéria.</li>
+            <li>Seront mis à disposition 2 amphithéâtres, une salle de prises en mains, un grand espace sponsor, une cafétéria.</li>
             <li>La journée se déroulera sur 2 tracks de conférences pour un total de 14 conférences, 6 lightning talks, et 3 hands on</li>
         </ul>
     </section>
     <section id="quisommesnous">
         <h1>L'équipe</h1>
-        <p>L'association Touraine Tech est consituée de membres actifs de la communauté tech de Tours métropole et sa région. Ils sont par ailleurs engagés dans les formations bénévoles, ateliers techniques et évènements du numérique : Tours JS, GDG Tours, Tours JUG, Tours MUG, Les Ateliers du Web Design, ...</p>
+        <p>L'association Touraine Tech est constituée de membres actifs de la communauté tech de Tours métropole et sa région. Ils sont par ailleurs engagés dans les formations bénévoles, ateliers techniques et évènements du numérique : Tours JS, GDG Tours, Tours JUG, Tours MUG, Les Ateliers du Web Design, ...</p>
     </section>
     <section id="participer" itemscope itemtype="http://schema.org/Event">
         <h1>Inscriptions</h1>
-        <p>Les inscriptions ne sont pas encore ouvertes tennez vous au jus sur twitter !</p>
+        <p>Les inscriptions ne sont pas encore ouvertes. Tenez-vous au jus sur twitter !</p>
         <p>
             Prochain <span itemprop="name">Touraine Tech</span>
             le <span itemprop="startDate" content="2018-02-23">vendredi 23/02/2018</span>
