--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,7 @@
                     <span itemprop="addressLocality">Tours</span>
                 </span>
             </span>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10809.685841048247!2d0.6847465!3d47.3646921!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x178da484f4c36cd4!2sPolytechnique+de+l&#39;universit%C3%A9+de+Tours!5e0!3m2!1sfr!2sfr!4v1505132799666" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         </p>
     </section>
     <section id="proposer">
