--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         <h1>Touraine Tech</h1>
         <h2>La première conférence technique en région centre sur les nouvelles technologies du numérique</h2>
         <p class="presentation-date">Touraine Tech aura lieu le 23 février 2018</p>
-        <p>Cet événement a pour but de promouvoir le secteur numérique, notamment son économie, ses métiers et ses formations.  Il est organisée bénévolement par l'association Touraine Tech, dont l'objectif est de promouvoir ce secteur d'activité en Touraine.</p>
+        <p>Cet événement a pour but de promouvoir le secteur numérique, notamment son économie, ses métiers et ses formations. Il est organisée bénévolement par l'association Touraine Tech, dont l'objectif est de promouvoir ce secteur d'activité en Touraine.</p>
     </div>
     <section class="themes">
         <h1>Thématiques</h1>
@@ -91,7 +91,7 @@
                     <span itemprop="addressLocality">Tours</span>
                 </span>
             </span>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10809.685841048247!2d0.6847465!3d47.3646921!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x178da484f4c36cd4!2sPolytechnique+de+l&#39;universit%C3%A9+de+Tours!5e0!3m2!1sfr!2sfr!4v1505132799666" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <iframe class="lozad" data-src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10809.685841048247!2d0.6847465!3d47.3646921!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x178da484f4c36cd4!2sPolytechnique+de+l&#39;universit%C3%A9+de+Tours!5e0!3m2!1sfr!2sfr!4v1505132799666" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         </p>
     </section>
     <section id="proposer">
@@ -101,14 +101,5 @@
 </main>
 <footer>
 </footer>
-<script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-106348061-1', 'auto');
-    ga('send', 'pageview');
-</script>
 </body>
 </html>
