fix du nom de domaine

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="google-site-verification" content="aloBwm93e88RJEH5XUhpIl9yuBphazWNYt6Al0PR7cM"/>
     <meta charset="UTF-8">
-    <meta property="og:url" content="https://tourainetech.github.io/"/>
+    <meta property="og:url" content="https://touraine.tech/"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Touraine Tech"/>
     <meta property="og:description" content="Une conférence tourangelle !"/>
@@ -15,7 +15,7 @@
 <body>
 <header class="nav-header">
     <div itemscope itemprop="organization" itemtype="http://schema.org/Organization" class="nav-bar">
-        <a class="link" href="https://tourainetech.github.io" itemprop="url">
+        <a class="link" href="https://touraine.tech" itemprop="url">
             <h1 itemprop="name">Touraine Tech</h1>
         </a>
         <label for="nav-trigger" class="nav-open">
