--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         <h1>Touraine Tech</h1>
         <h2>La première conférence téchnique en région centre sur les nouvelles technologies du numérique</h2>
         <p class="presentation-date">Touraine Tech aura lieu le 23 février 2018</p>
-        <p>Cet événement a pour but de promouvoir le secteur numérique, notamment son économie, ses métiers et ses formations.  Il est organisée bénévolement par l'association Touraine Tech, dont l'objectif est de promouvoir ce secteur d'activité en touraine.</p>
+        <p>Cet événement a pour but de promouvoir le secteur numérique, notamment son économie, ses métiers et ses formations.  Il est organisé bénévolement par l'association Touraine Tech, dont l'objectif est de promouvoir ce secteur d'activité en touraine.</p>
     </div>
     <section class="themes">
         <h1>Thématiques</h1>
