modifications img et design

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
 <header class="nav-header">
     <div itemscope itemprop="organization" itemtype="http://schema.org/Organization" class="nav-bar">
         <a class="link" href="https://touraine.tech" itemprop="url">
+            <img src="../img/logo_tnt.svg" alt="logo Touraine Tech">
             <h1 itemprop="name">Touraine Tech</h1>
         </a>
         <label for="nav-trigger" class="nav-open">
@@ -32,9 +33,9 @@
 <main class="content">
     <div class="presentation">
         <h1>Touraine Tech</h1>
-        <h2>La première conférence technique en région centre sur les nouvelles technologies du numérique</h2>
-        <p class="presentation-date">Touraine Tech aura lieu le 23 février 2018</p>
-        <p>Cet événement a pour but de promouvoir le secteur numérique, notamment son économie, ses métiers et ses formations. Il est organisée bénévolement par l'association Touraine Tech, dont l'objectif est de promouvoir ce secteur d'activité en Touraine.</p>
+        <h2>La première conférence technique en région centre<br> sur les nouvelles technologies du numérique</h2>
+        <p class="presentation-date"><<img src="../img/calendar.svg" alt="picto calendrier">Rendez-vous le 23 février 2018</p>
+        <p>Cet événement a pour but de promouvoir le secteur numérique, notamment son économie, ses métiers et ses formations. Il est organisé bénévolement par l'association Touraine Tech, dont l'objectif est de promouvoir ce secteur d'activité en Touraine.</p>
     </div>
     <section class="themes">
         <h1>Thématiques</h1>
