--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta name="google-site-verification" content="aloBwm93e88RJEH5XUhpIl9yuBphazWNYt6Al0PR7cM"/>
+    <meta name="google-site-verification" content="aloBwm93e88RJEH5XUhpIl9yuBphazWNYt6Al0PR7cM">
     <meta charset="UTF-8">
-    <meta property="og:url" content="https://tourainetech.github.io/"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:title" content="Touraine Tech"/>
-    <meta property="og:description" content="Une conférence tourangelle !"/>
+    <meta property="og:url" content="https://touraine.tech/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Touraine Tech">
+    <meta property="og:description" content="Une conférence tourangelle !">
     <meta property="og:locale" content="fr_FR">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <!-- <meta property="og:image" content=""/>-->
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,400i,500,600,700" rel="stylesheet">
     <title>Touraine Tech</title>
 </head>
 <body>
 <header class="nav-header">
     <div itemscope itemprop="organization" itemtype="http://schema.org/Organization" class="nav-bar">
-        <a class="link" href="https://tourainetech.github.io" itemprop="url">
+        <a class="link" href="https://touraine.tech" itemprop="url">
+            <img src="../img/logo_tnt.svg" alt="logo Touraine Tech">
             <h1 itemprop="name">Touraine Tech</h1>
         </a>
         <label for="nav-trigger" class="nav-open">
@@ -31,35 +34,37 @@
 </header>
 <main class="content">
     <div class="presentation">
-        <h1>Touraine Tech</h1>
-        <h2>La première conférence technique en région centre sur les nouvelles technologies du numérique</h2>
-        <p class="presentation-date">Touraine Tech aura lieu le 23 février 2018</p>
-        <p>Cet événement a pour but de promouvoir le secteur numérique, notamment son économie, ses métiers et ses formations. Il est organisée bénévolement par l'association Touraine Tech, dont l'objectif est de promouvoir ce secteur d'activité en Touraine.</p>
+        <article class="presentation-intro">
+            <h1>Touraine Tech</h1>
+            <h2>La première conférence technique en région centre<br> sur les nouvelles technologies du numérique</h2>
+        </article>
+        <article class="presentation-date"><img src="../img/calendar.svg" alt="picto calendrier"><p>Rendez-vous le 23 février 2018</p></article>
+        <article class="presentation-event"><img src="../img/but_event.jpg" alt="photo d'un ordinateur avec du code"><p>Cet événement a pour but de promouvoir le secteur numérique, notamment son économie, ses métiers et ses formations. Il est organisé bénévolement par l'association Touraine Tech, dont l'objectif est de promouvoir ce secteur d'activité en Touraine.</p></article>
     </div>
     <section class="themes">
         <h1>Thématiques</h1>
         <p>L'axe principal mis en avant sera le développement responsable.</p>
         <ul>
-            <li>
-                Design, UI, UX
+            <li class="design">
+                <span>Design, UI, UX</span>
             </li>
-            <li>
-                Front web, Mobile
+            <li class="front">
+                <span>Front web, Mobile</span>
             </li>
-            <li>
-                Backends, Cloud, Big Data
+            <li class="cloud">
+                <span>Backends, Cloud, Big Data</span>
             </li>
-            <li>
-                Jeux vidéos et hybrides
+            <li class="jeux">
+                <span>Jeux vidéos et hybrides</span>
             </li>
-            <li>
-                Internet des objets
+            <li class="objets">
+                <span>Internet des objets</span>
             </li>
-            <li>
-                Conception, architecture
+            <li class="archi">
+                <span>Conception, architecture</span>
             </li>
-            <li>
-                Outillage, pratiques de développement
+            <li class="outils">
+                <span>Outillage, pratiques de développement</span>
             </li>
         </ul>
     </section>
@@ -101,5 +106,5 @@
 </main>
 <footer>
 </footer>
-</body>
+<script type="text/javascript" src="/manifest.js"></script><script type="text/javascript" src="/vendor.js"></script><script type="text/javascript" src="/client.js"></script></body>
 </html>
