--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <meta property="og:locale" content="fr_FR">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <meta property="og:image" content=""/>-->
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,400i,500,600,700" rel="stylesheet">
     <title>Touraine Tech</title>
 </head>
 <body>
@@ -32,6 +33,12 @@
 </header>
 <main class="content">
     <div class="presentation">
+        <article class="presentation-intro">
+            <h1>Touraine Tech</h1>
+            <h2>La première conférence technique en région centre<br> sur les nouvelles technologies du numérique</h2>
+        </article>
+        <article class="presentation-date"><img src="../img/calendar.svg" alt="picto calendrier"><p>Rendez-vous le 23 février 2018</p></article>
+        <article class="presentation-event"><img src="../img/but_event.jpg" alt="photo d'un ordinateur avec du code"><p>Cet événement a pour but de promouvoir le secteur numérique, notamment son économie, ses métiers et ses formations. Il est organisé bénévolement par l'association Touraine Tech, dont l'objectif est de promouvoir ce secteur d'activité en Touraine.</p></article>
         <h1>Touraine Tech</h1>
         <h2>La première conférence technique en région centre<br> sur les nouvelles technologies du numérique</h2>
         <p class="presentation-date"><img src="../img/calendar.svg" alt="picto calendrier"/>Rendez-vous le 23 février 2018</p>
@@ -41,26 +48,26 @@
         <h1>Thématiques</h1>
         <p>L'axe principal mis en avant sera le développement responsable.</p>
         <ul>
-            <li>
-                Design, UI, UX
+            <li class="design">
+                <span>Design, UI, UX</span>
             </li>
-            <li>
-                Front web, Mobile
+            <li class="front">
+                <span>Front web, Mobile</span>
             </li>
-            <li>
-                Backends, Cloud, Big Data
+            <li class="cloud">
+                <span>Backends, Cloud, Big Data</span>
             </li>
-            <li>
-                Jeux vidéos et hybrides
+            <li class="jeux">
+                <span>Jeux vidéos et hybrides</span>
             </li>
-            <li>
-                Internet des objets
+            <li class="objets">
+                <span>Internet des objets</span>
             </li>
-            <li>
-                Conception, architecture
+            <li class="archi">
+                <span>Conception, architecture</span>
             </li>
-            <li>
-                Outillage, pratiques de développement
+            <li class="outils">
+                <span>Outillage, pratiques de développement</span>
             </li>
         </ul>
     </section>
