some more cleaning

--- a/src/index.html
+++ b/src/index.html
@@ -105,5 +105,5 @@
 </main>
 <footer>
 </footer>
-<script type="text/javascript" src="/manifest.js"></script><script type="text/javascript" src="/vendor.js"></script><script type="text/javascript" src="/client.js"></script></body>
+</body>
 </html>
