Add logo for og metas

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <meta property="og:description" content="Une conférence tourangelle !">
     <meta property="og:locale" content="fr_FR">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <!-- <meta property="og:image" content=""/>-->
+    <meta property="og:image" content="${require('../img/logo_tnt.svg')}"/>
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,400i,500,600,700" rel="stylesheet">
     <title>Touraine Tech</title>
 </head>
