--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
             <h1 itemprop="name">Touraine Tech</h1>
         </a>
         <a class="link participer" href="#participer">Participer</a>
-        <label for="nav-trigger" class="nav-open">
+        <label for="nav-trigger" class="nav-open" id="nav-open">
             Menu
         </label>
     </div>
