--- a/src/index.html
+++ b/src/index.html
@@ -29,30 +29,47 @@
     <nav>
         <a class="link" href="#presention">Présentation</a>
         <a class="link" href="#thematiques">Thématiques</a>
-        <a class="link" href="#ambitions">Ambitions</a>
         <a class="link" href="#quisommesnous">Qui sommes nous ?</a>
         <a class="link" href="#participer">Participer</a>
         <a class="link" href="#proposer">Proposer un sujet</a>
     </nav>
 </header>
 <main class="content">
-    <div class="presentation" id="presention">
+    <section class="presentation" id="presention">
         <article class="presentation-intro">
             <h1>Touraine Tech</h1>
             <h2>La première conférence technique en région centre<br> sur les nouvelles technologies du numérique</h2>
         </article>
-        <article class="presentation-date">
-            <img src="../img/calendar.svg" alt="picto calendrier">
-            <p>Rendez-vous le 23 février 2018</p>
+        <article class="presentation-info">
+            <div class="lieu">
+                <img src="../img/lieu.svg" alt="picto de localisation">
+                <p>Polytechnique de l'Université de Tours</p>                
+            </div>
+            <div class="date">
+                <img src="../img/calendar.svg" alt="picto d'un calendrier">
+                <p>Rendez-vous le 23 février 2018</p>               
+            </div>
+            <div class="conf">
+                <img src="../img/micro.svg" alt="picto d'un micro">
+                <p>14 conférences et 6 lightning talks</p>               
+            </div>
         </article>
         <article class="presentation-event">
-            <img src="../img/but_event.jpg" alt="photo d'un ordinateur avec du code">
-            <p>Cet événement a pour but de promouvoir le secteur numérique, notamment son économie, ses métiers et ses formations. Il est organisé bénévolement par l'association Touraine Tech, dont l'objectif est de promouvoir ce secteur d'activité en Touraine.</p>
+            <div class="event">
+                <p>Cet événement a pour but de <em>promouvoir le secteur numérique</em>, notamment son économie, ses métiers et ses formations. Il est organisé bénévolement par l’association <em>Touraine Tech</em>, dont l’objectif est de développer ce secteur d’activité en Touraine.</p>
+                <p>Cette conférences est ouverte à un large public, aussi bien des professionnels du secteur que des étudiants préparant leur insertion dans le monde du travail.</p>    
+            </div>
+            <div class="event">
+                <p>Pour cette première édition, nous organisons une journée de conférence sur Tours dans les locaux du département informatique de <em>l'école Polytechnique de l'Université de Tours</em>.</p>
+                <p>Seront mis à disposition 2 amphithéâtres, une salle de prises en mains, un grand espace sponsor, une cafétéria.<br>
+                <em>La journée se déroulera sur 2 tracks de conférences pour un total de 14 conférences et 6 lightning talks</em>.</p>               
+            </div>
+ 
         </article>
         <article class="presentation-accroche">
-            <h1>Hello</h1>
+            <h1>Pour cette première, nous accueillerons 250 personnes</h1>
         </article>
-    </div>
+    </section>
     <section class="themes" id="thematiques">
         <h1>Thématiques</h1>
         <p>L'axe principal mis en avant sera le développement responsable.</p>
@@ -80,38 +97,37 @@
             </li>
         </ul>
     </section>
-    <section class="numbers" id="ambitions">
-        <h1>Ambitions</h1>
-        <ul>
-            <li>Cette conférence sera ouverte sur un large panel de technologies informatiques, visant un public autant professionnel qu'étudiant. Elle accueillera jusqu'à 250 personnes.</li>
-            <li>Pour cette première édition, nous organisons une journée de conférence sur Tours dans les locaux du département informatique de l'école polytechnique de l'université de Tours.</li>
-            <li>Seront mis à disposition 2 amphithéâtres, une salle de prises en mains, un grand espace sponsor, une cafétéria.</li>
-            <li>La journée se déroulera sur 2 tracks de conférences pour un total de 14 conférences, 6 lightning talks, et 3 hands on</li>
-        </ul>
-    </section>
     <section id="quisommesnous">
         <h1>L'équipe</h1>
         <p>L'association Touraine Tech est constituée de membres actifs de la communauté tech de Tours métropole et sa région. Ils sont par ailleurs engagés dans les formations bénévoles, ateliers techniques et évènements du numérique : Tours JS, GDG Tours, Tours JUG, Tours MUG, Les Ateliers du Web Design, ...</p>
+        <div class="ateliers">
+            <img src="../img/toursjs.jpg" alt="Logo du Tours JS">
+            <img src="../img/docker.jpeg" alt="Logo dU Docker">
+            <img src="../img/gdgtours.png" alt="Logo du GDG Tours">
+            <img src="../img/Tours-Jug.png" alt="Logo du Tours Jug">
+            <img src="../img/AWD.jpg" alt="Logo des Ateliers du Web Design">
+        </div>
     </section>
     <section id="participer" itemscope itemtype="http://schema.org/Event">
         <h1>Inscriptions</h1>
-        <p>Les inscriptions ne sont pas encore ouvertes. Tenez-vous au jus sur twitter !</p>
-        <p>
-            Prochain <span itemprop="name">Touraine Tech</span>
-            le <span itemprop="startDate" content="2018-02-23">vendredi 23/02/2018</span>
-            à
-            <span itemprop="location" itemscope itemtype="http://schema.org/Place">
-                <span itemprop="name">Polytech Tours</span>
-                <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                    <span itemprop="streetAddress">64 Avenue Jean Portalis</span>,
-                    <span itemprop="postalCode">37200</span>
-                    <span itemprop="addressLocality">Tours</span>
+        <div class="inscriptions">  
+            <p>Les inscriptions ne sont pas encore ouvertes. Tenez-vous au jus sur twitter !</p>
+            <p>
+                Prochain <span itemprop="name">Touraine Tech</span>
+                le <span itemprop="startDate" content="2018-02-23">vendredi 23/02/2018</span>
+                à
+                <span itemprop="location" itemscope itemtype="http://schema.org/Place">
+                    <span itemprop="name">Polytech Tours</span>
+                    <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+                        <span itemprop="streetAddress">64 Avenue Jean Portalis</span>,
+                        <span itemprop="postalCode">37200</span>
+                        <span itemprop="addressLocality">Tours</span>
+                    </span>
                 </span>
-            </span>
-            <div class="map-responsive">
-                <iframe class="lozad" data-src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10809.685841048247!2d0.6847465!3d47.3646921!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x178da484f4c36cd4!2sPolytechnique+de+l&#39;universit%C3%A9+de+Tours!5e0!3m2!1sfr!2sfr!4v1505132799666" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-            </div>
-        </p>
+            </p>
+        <div class="map-responsive">
+            <iframe class="lozad" data-src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10809.685841048247!2d0.6847465!3d47.3646921!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x178da484f4c36cd4!2sPolytechnique+de+l&#39;universit%C3%A9+de+Tours!5e0!3m2!1sfr!2sfr!4v1505132799666" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
     </section>
     <section id="proposer">
         <h1>Call For Papers</h1>
