remove mug from the list

--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
     </section>
     <section id="quisommesnous">
         <h1>L'équipe</h1>
-        <p>L'association Touraine Tech est constituée de membres actifs de la communauté tech de Tours métropole et sa région. Ils sont par ailleurs engagés dans les formations bénévoles, ateliers techniques et évènements du numérique : Tours JS, GDG Tours, Tours JUG, Tours MUG, Les Ateliers du Web Design, ...</p>
+        <p>L'association Touraine Tech est constituée de membres actifs de la communauté tech de Tours métropole et sa région. Ils sont par ailleurs engagés dans les formations bénévoles, ateliers techniques et évènements du numérique : Tours JS, GDG Tours, Tours JUG, Les Ateliers du Web Design, ...</p>
         <div class="ateliers">
             <img src="../img/toursjs.jpg" alt="Logo du Tours JS">
             <img src="../img/docker.jpeg" alt="Logo dU Docker">
