--- a/src/index.html
+++ b/src/index.html
@@ -43,28 +43,28 @@
         <article class="presentation-info">
             <div class="lieu">
                 <img src="../img/lieu.svg" alt="picto de localisation">
-                <p>Polytechnique de l'Université de Tours</p>                
+                <p>Polytechnique de l'Université de Tours</p>
             </div>
             <div class="date">
                 <img src="../img/calendar.svg" alt="picto d'un calendrier">
-                <p>Rendez-vous le 23 février 2018</p>               
+                <p>Rendez-vous le 23 février 2018</p>
             </div>
             <div class="conf">
                 <img src="../img/micro.svg" alt="picto d'un micro">
-                <p>14 conférences et 6 lightning talks</p>               
+                <p>14 conférences et 6 lightning talks</p>
             </div>
         </article>
         <article class="presentation-event">
             <div class="event">
                 <p>Cet événement a pour but de <em>promouvoir le secteur numérique</em>, notamment son économie, ses métiers et ses formations. Il est organisé bénévolement par l’association <em>Touraine Tech</em>, dont l’objectif est de développer ce secteur d’activité en Touraine.</p>
-                <p>Cette conférences est ouverte à un large public, aussi bien des professionnels du secteur que des étudiants préparant leur insertion dans le monde du travail.</p>    
+                <p>Cette conférences est ouverte à un large public, aussi bien des professionnels du secteur que des étudiants préparant leur insertion dans le monde du travail.</p>
             </div>
             <div class="event">
                 <p>Pour cette première édition, nous organisons une journée de conférence sur Tours dans les locaux du département informatique de <em>l'école Polytechnique de l'Université de Tours</em>.</p>
                 <p>Seront mis à disposition 2 amphithéâtres, une salle de prises en mains, un grand espace sponsor, une cafétéria.<br>
-                <em>La journée se déroulera sur 2 tracks de conférences pour un total de 14 conférences et 6 lightning talks</em>.</p>               
+                <em>La journée se déroulera sur 2 tracks de conférences pour un total de 14 conférences et 6 lightning talks</em>.</p>
             </div>
- 
+
         </article>
         <article class="presentation-accroche">
             <h1>Pour cette première, nous accueillerons 250 personnes</h1>
@@ -110,8 +110,12 @@
     </section>
     <section id="participer" itemscope itemtype="http://schema.org/Event">
         <h1>Inscriptions</h1>
-        <div class="inscriptions">  
-            <p>Les inscriptions ne sont pas encore ouvertes. Tenez-vous au jus sur twitter !</p>
+        <div class="inscriptions">
+            <p>Les inscriptions ne sont pas encore ouvertes.</p>
+            <p>
+              <a href="https://twitter.com/tourainetech" target="_BLANK">Tenez-vous au jus sur twitter !</a>
+            </p>
+
             <p>
                 Prochain <span itemprop="name">Touraine Tech</span>
                 le <span itemprop="startDate" content="2018-02-23">vendredi 23/02/2018</span>
@@ -134,5 +138,15 @@
         <p>Bientôt ouvert !</p>
     </section>
 </main>
+<!-- <footer>
+  <p>FOOTER</p>
+  <ul>
+    <li>Réseaux</li>
+    <li><a href="https://www.facebook.com/tourainetech/" target="_BLANK">LOGO FACEBOOK</a></li>
+    <li><a href="https://twitter.com/tourainetech" target="_BLANK">LOGO TWITTER</a></li>
+    <li></li>
+    <li></li>
+  </ul>
+</footer> -->
 </body>
 </html>
