integration of "tarif" table on mobile

--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -198,7 +198,7 @@ ${require('html-loader!./partials/header.html')}
             <h1>Comment devenir sponsor ?</h1>
             <hr class="underline">
 
-            <table>
+            <table class="tarif-desktop">
                 <tr>
                     <th></th>
                     <th class="bronze-border">Bronze</th>
@@ -256,6 +256,41 @@ ${require('html-loader!./partials/header.html')}
                     <td class="gold">2000€</td>
                 </tr>
             </table>
+            <div class="bronze tarif-mobile">
+                <h1>Bronze</h1>
+                <ul>
+                <li>Logo sur nos suport de communication</li>
+                <li>Présentation personnalisée sur nos support de communication</li>
+                <li>Exploiter notre logo dans votre communication</li>
+                <hr>
+                <li>500€</li>
+                </ul>
+            </div>
+            <div class="silver tarif-mobile">
+                <h1>Silver</h1>
+                <ul>
+                    <li>1 stand exposant (3 * 1.5m)</li>
+                    <li>Entrées pour la journée (* 2)</li>
+                    <li>Logo sur nos suport de communication</li>
+                    <li>Présentation personnalisée sur nos support de communication</li>
+                    <li>Exploiter notre logo dans votre communication</li>
+                    <hr>
+                    <li>1500€</li>
+                </ul>
+            </div>
+            <div class="gold tarif-mobile">
+                <h1>Gold</h1>
+                <ul>
+                    <li>1 stand exposant (5 * 1.5m)</li>
+                    <li>Entrées pour la journée (* 4)</li>
+                    <li>Logo sur nos suport de communication</li>
+                    <li>Présentation personnalisée sur nos support de communication</li>
+                    <li>Prise de parole en 5min pendant une keynote</li>
+                    <li>Exploiter notre logo dans votre communication</li>
+                    <hr>
+                    <li>2000€</li>
+                </ul>
+            </div>
         </article>
         <article class="footer">
             <span>Vous souhaitez sponsoriser l’événement ?</span>
