--- a/src/index.html
+++ b/src/index.html
@@ -44,18 +44,17 @@ ${require('html-loader!./partials/header.html')}
         </article>
         <article class="presentation-event">
             <div class="event">
-                <p>Cet événement a pour but de <em>promouvoir le secteur numérique</em>, notamment son économie, ses métiers et ses formations. Il est organisé bénévolement par l’association <em>Touraine Tech</em>, dont l’objectif est de développer ce secteur d’activité en Touraine.</p>
-                <p>Cette conférences est ouverte à un large public, aussi bien des professionnels du secteur que des étudiants préparant leur insertion dans le monde du travail.</p>
+                <p>Cet événement a pour but de <em>promouvoir le secteur numérique</em>, notamment son économie, ses métiers et ses formations. Il est organisé bénévolement par l’association <em>Touraine Tech</em>, dont l’objectif est de développer ce secteur d’activité en Touraine.</p>
+                <p>Cette conférences est ouverte à un large public, aussi bien des professionnels du secteur que des étudiants préparant leur insertion dans le monde du travail.</p>
             </div>
             <div class="event">
                 <p>Pour cette première édition, nous organisons une journée de conférence sur Tours dans les locaux du département informatique de <em>l'école Polytechnique de l'Université de Tours</em>.</p>
                 <p>Seront mis à disposition 2 amphithéâtres, une salle de prises en mains, un grand espace sponsor, une cafétéria.<br>
                 <em>La journée se déroulera sur 2 tracks de conférences pour un total de 14 conférences et 6 lightning talks</em>.</p>
             </div>
-
         </article>
         <article class="presentation-accroche">
-            <h1>Pour cette première, nous accueillerons 250 personnes</h1>
+            <h1>Pour cette première, nous accueillerons 250 personnes</h1>
         </article>
     </section>
     <section class="themes" id="thematiques">
@@ -103,7 +102,6 @@ ${require('html-loader!./partials/header.html')}
             <p>
               <a href="https://twitter.com/tourainetech" target="_BLANK">Tenez-vous au jus sur twitter !</a>
             </p>
-
             <p>
                 Prochain <span itemprop="name">Touraine Tech</span>
                 le <span itemprop="startDate" content="2018-02-23">vendredi 23/02/2018</span>
