fixes on links and remove logs.

--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -296,9 +296,21 @@ ${require('html-loader!./partials/header.html')}
             <span>Vous souhaitez sponsoriser l’événement ?</span>
             <span>Contactez-nous sur tourainetech@googlegroups.com</span>
             <ul>
-                <li><img src="../img/twitter.png" alt=""></li>
-                <li><img src="../img/facebook.png" alt=""></li>
-                <li><img src="../img/tourainetech.png" alt=""></li>
+                <li>
+                    <a href="https://twitter.com/tourainetech" target="_blank">
+                        <img src="../img/twitter.png" alt="TouraineTech's twitter page">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/tourainetech/" target="_blank">
+                        <img src="../img/facebook.png" alt="TouraineTech's facebook page">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://touraine.tech/">
+                        <img src="../img/tourainetech.png" alt="Touraine Tech">
+                    </a>
+                </li>
             </ul>
         </article>
     </section>
