--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 <body class="index">
 ${require('html-loader!./partials/header.html')}
 <main class="content">
-    <section class="presentation" id="presention" itemscope itemtype="http://schema.org/NewsArticle">
+    <section class="presentation" id="presentation" itemscope itemtype="http://schema.org/NewsArticle">
         <meta itemscope itemprop="mainEntityOfPage"  itemType="https://schema.org/WebPage" itemid="https://touraine.tech/"/>
         <div itemscope itemprop="image"  itemType="https://schema.org/ImageObject">
             <meta itemprop="url" content="${require('../img/logo_tnt.svg')}">
