works on print version

--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -12,6 +12,11 @@ ${require('html-loader!./partials/header.html')}
 <main class="sponsor-main">
     <section class="presentation">
         <div class="sponor-header">
+            <div class="background-to-print">
+            </div>
+            <div class="logo-to-print">
+                <img src="./../img/logo_tnt.svg" alt="logo touraineTech">
+            </div>
             <h1 itemprop="headline">Touraine</br> Tech</h1>
             <h2 itemprop="description">Dossier de sponsoring</h2>
         </div>
