fix(): CG first pass
ImageOptimized assets
Updated GDG and ToursJug logo to square ones
Few wording fixes

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
         <article class="presentation-info">
             <div class="lieu">
                 <img src="../img/lieu.svg" alt="picto de localisation">
-                <p>Polytechnique de l'Université de Tours</p>
+                <p>École Polytechnique de l'Université de Tours</p>
             </div>
             <div class="date">
                 <img src="../img/calendar.svg" alt="picto d'un calendrier">
@@ -105,7 +105,7 @@
     </section>
     <section id="quisommesnous">
         <h1>L'équipe</h1>
-        <p>L'association Touraine Tech est constituée de membres actifs de la communauté tech de Tours métropole et sa région. Ils sont par ailleurs engagés dans les formations bénévoles, ateliers techniques et évènements du numérique : Tours JS, GDG Tours, Tours JUG, Les Ateliers du Web Design, ...</p>
+        <p>L'association Touraine Tech est constituée de membres actifs de la communauté tech de Tours métropole et sa région. Ils sont par ailleurs engagés dans les formations bénévoles, ateliers techniques et évènements du numérique : Tours JS, Docker meetup Tours, GDG Tours, Tours JUG, Les Ateliers du Web Design, ...</p>
         <div class="ateliers">
             <img src="../img/toursjs.jpg" alt="Logo du Tours JS">
             <img src="../img/docker.jpeg" alt="Logo dU Docker">
