fix(#30) : fixes #30, speak more about palo altours

--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@ ${require('html-loader!./partials/header.html')}
     </section>
     <section id="quisommesnous">
         <h1>L'équipe</h1>
-        <p>L'association Touraine Tech est constituée de membres actifs de la communauté tech de Tours métropole et sa région. Ils sont par ailleurs engagés dans les formations bénévoles, ateliers techniques et évènements du numérique : Tours JS, Docker meetup Tours, GDG Tours, Tours JUG, Les Ateliers du Web Design, ...</p>
+        <p>Le comité Touraine Tech de l’association PALO ALTOURS, est constitué de membres actifs de la communauté tech de Tours métropole et sa région . Ils sont par ailleurs engagés dans les formations bénévoles, ateliers techniques et évènements du numérique : Tours JS, Tours JUG, GDG Tours, les Ateliers du Web Design, Docker Tours...</p>
         <div class="ateliers">
             <img src="../img/toursjs.jpg" alt="Logo du Tours JS">
             <img src="../img/docker.jpeg" alt="Logo dU Docker">
