fix(#30) : fixes #30, show more about palo altours

--- a/src/index.html
+++ b/src/index.html
@@ -88,6 +88,7 @@ ${require('html-loader!./partials/header.html')}
         <h1>L'équipe</h1>
         <p>Le comité Touraine Tech de l’association PALO ALTOURS, est constitué de membres actifs de la communauté tech de Tours métropole et sa région . Ils sont par ailleurs engagés dans les formations bénévoles, ateliers techniques et évènements du numérique : Tours JS, Tours JUG, GDG Tours, les Ateliers du Web Design, Docker Tours...</p>
         <div class="ateliers">
+            <img src="../img/paloaltours.png" alt="Logo de Palo Altours">
             <img src="../img/toursjs.jpg" alt="Logo du Tours JS">
             <img src="../img/docker.jpeg" alt="Logo dU Docker">
             <img src="../img/gdgtours.png" alt="Logo du GDG Tours">
